18 Jun 97 15:01:42 flechsig grating error fixed
15 Jul 97 13:43:53 flechsig hor. defl. error fixed??
30 Sep 97 09:17:43 flechsig single RT and full RT working
	new features: slope errors, energy resolution, 
	size of elements, apertures/ slits in interface planes 
21 Oct 97 08:12:30 flechsig batch mode enabled
	new data file section (PSSOURCES)--
	all parameters will be saved
	high/ low beta undulator source (RT)
22 Oct 97 15:16:45 flechsig phase_*_10
29 Oct 97 16:36:43 flechsig 
	optimization, extraction available
31 Oct 97 09:13:13 flechsig change in file format
17 Feb 98 11:00:03 flechsig fixfocus in optimization
	cost function changed		
05 May 98 10:35:44 flechsig Neucompilierung wegen 
	neuer VMS- Version
15 Oct 98 08:28:29 flechsig Neucompilierung als Test
30 Oct 98 09:01:58 flechsig Fehler beim editieren der 
	Parameter beseitigt (phasec.c)
25 NOV 98 SLS Undulatoren eingefuegt	
03 DEZ 98 emittance wird in RT- Undulatorquellen beruecksichtigt
               Fehler bei slope error behoben
09 Apr 99 Fehler in Optimierungsroutine behoben
	Optimierung mit slope error moeglich
15 Oct 99 filesystem geaendert
21 Dec 99 phase_integration_12 new version 
06 Jan 00 VMS and LINUX version 1.01
	new version for optimization and 
	extraction not yet available
        !!! musste struct statistics verkleinern !!!
18 Jan 00 VLS grating sign- problem solved
20 Jan 00 phase_source_11.for
07 Feb 00 igrating wird automatisch gesetzt, 
	Diagnose- Felder werden wieder gefuellt 
04 Jan 01 input coefficient file as optical element
21 May 01 bug with metafile under unix solved 
24 Jun 03 bug fix slit for ray tracing
04 Feb 04 apply autoconfigure
17 Feb 04 new widgets for beamline and mirror
          include misalignment
	  remove noise from debug screen 
          configure with --enable-debug for verbose output
20 Feb 04 footprint available in batch mode
****************    end of NEWS  *****************           
**************************************************